--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,3 +10,26 @@ body {
     align-items: center;
     min-height: 100vh;
 }
+
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #3725a9 #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 16px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+    border-radius: 10px;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #382d80;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+  }
