--- a/styles/globals.css
+++ b/styles/globals.css
@@ -15,7 +15,7 @@ body {
   /* Firefox */
   * {
     scrollbar-width: auto;
-    scrollbar-color: #3725a9 #ffffff;
+    scrollbar-color: rgb(31 41 55) #ffffff;
   }
 
   /* Chrome, Edge, and Safari */
@@ -29,7 +29,7 @@ body {
   }
 
   *::-webkit-scrollbar-thumb {
-    background-color: #382d80;
+    background-color: rgb(31 41 55);
     border-radius: 10px;
     border: 3px solid #ffffff;
   }
