--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,8 @@ body {
     background: linear-gradient(to bottom, rgb(0, 123, 66), rgb(255, 255, 255));
     background-image: url("../assets/background6.png");
     background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
     display: flex;
     justify-content: center;
     align-items: center;
