--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,7 +17,7 @@ body {
   /* Firefox */
   * {
     scrollbar-width: auto;
-    scrollbar-color: rgb(31 41 55) #ffffff;
+    scrollbar-color: rgb(70, 147, 255) #ffffff;
   }
 
   /* Chrome, Edge, and Safari */
@@ -31,7 +31,7 @@ body {
   }
 
   *::-webkit-scrollbar-thumb {
-    background-color: rgb(31 41 55);
+    background-color: rgb(63, 143, 255);
     border-radius: 10px;
     border: 3px solid #ffffff;
   }
